--- a/src/index.css
+++ b/src/index.css
@@ -3,23 +3,27 @@
   margin: 0;
   padding: 0;
 }
-.header{
+
+.header {
   height: 20px;
   width: 100%;
   background-color: blue;
 
 }
-.ravali_img{
+
+.ravali_img {
   width: 300px;
   height: 300px;
   border-radius: 150px;
   border: 2px solid #ddd;
-  
+
 }
+
 .ravali_img:hover {
   transform: scaleX(-1);
   border: 2px solid #34eb9e;
 }
+
 .mi-header-image {
   text-align: center;
   padding: 40px;
@@ -42,14 +46,16 @@
   padding: 8px 0;
 }
 
-.navbar-links li Link{
+.navbar-links li Link {
   display: block;
   color: white;
-  
+
 }
-.Link{
+
+.Link {
   text-decoration: none;
 }
+
 ul {
   list-style-type: none;
   padding: 10px;
@@ -64,12 +70,14 @@ ul li {
   overflow: hidden;
   color: white;
   font-weight: bold;
-  
+
 }
+
 .active {
   font-weight: bold;
   color: white;
 }
+
 /* ul li:hover {
   background-color: #75F8F7;
   padding: 10px 15px;
@@ -124,30 +132,31 @@ ul li {
     transform: rotate(45deg) translate(-5px, -6px);
   }
 }
+
 .one {
   position: fixed;
 }
 
 .bgimage {
-  
-  height: auto;
-  background-image: url('C:\Users\user\Desktop\Ravali_repository\ravali-repository\public\images\bg3.jpg');
+  ../public/images/bg.jpg height: auto;
+  background-image: url('../public/images/bg3.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  
+
 }
+
 @media (max-width: 767px) {
   .bgimage {
-      background-image: url('C:\Users\user\Desktop\Ravali_repository\ravali-repository\public\images\bg3.jpg');
+    background-image: url('../public/images/bg3.jpg');
   }
 }
 
 /* Media query for screens up to 480px */
 @media (max-width: 440px) {
   .bgimage {
-      background-image: url('C:\Users\user\Desktop\Ravali_repository\ravali-repository\public\images\bg3.jpg');
+    background-image: url('../public/images/bg3.jpg');
   }
 }
 
@@ -155,46 +164,58 @@ ul li {
   font-size: 34px;
   color: #fff;
 }
- /* Home Component Css */
 
- .typedtext{
+/* Home Component Css */
+
+.typedtext {
   color: white;
   font-size: 40px;
   font-weight: bold;
   text-shadow: 2px 2px 4px gray;
- }
- .align-items-center{
-  padding: 90px; 
-  
- }
- @keyframes example {
-  from {top: 300px;}
-  to {top: 0px; }
 }
-.animation{
+
+.align-items-center {
+  padding: 90px;
+
+}
+
+@keyframes example {
+  from {
+    top: 300px;
+  }
+
+  to {
+    top: 0px;
+  }
+}
+
+.animation {
   position: relative;
   animation-name: example;
-  animation-duration: 3s;  
+  animation-duration: 3s;
   animation-fill-mode: forwards;
 }
- .bg-dark{
+
+.bg-dark {
   height: auto;
   /* position: fixed; */
   z-index: 300;
-  
- }
 
- .highlight {
+}
+
+.highlight {
   color: #34eb9e;
   /* Add any other styles as needed */
 }
-.about_para_text{
-  color:white;
+
+.about_para_text {
+  color: white;
   font-size: 20px;
   font-style: oblique;
   text-indent: 50px;
 }
-.home_image{
+
+.home_image {
   width: 300px;
   height: 300px;
   box-shadow: 10px 10px;
@@ -203,85 +224,118 @@ ul li {
   transition-property: width, height;
   transition-duration: 2s;
   transform: translateZ(0) scale(1);
-  
+
 }
-.home_image:hover{
+
+.home_image:hover {
   opacity: 0.6;
   width: 400px;
   height: 400px;
-  
+
 }
 
 /* About Component css */
 
 
-.about_text{
+.about_text {
   font-weight: bold;
   color: white;
   font-size: 35px;
   padding: 60px;
-  
+
 
 }
-.aboutpic{
-  height:800px;
+
+.aboutpic {
+  height: 800px;
 }
-.textsize{
+
+.textsize {
   font-size: 16px;
   color: white;
-  list-style: none; /* Remove default list styles */
-  padding: 0; /* Remove default padding */
+  list-style: none;
+  
+  padding: 0;
+  
 }
+
 .textsize li {
-  margin-bottom: 10px; /* Adjust spacing between each list item */
+  margin-bottom: 10px;
+ 
 }
 
 .label {
-  margin-right: 10px; /* Adjust the spacing between label and value */
+  margin-right: 10px;
+  
 }
-.img2:hover {opacity: 0.7;}
 
-.img_animation{
+.img2:hover {
+  opacity: 0.7;
+}
+
+.img_animation {
   position: relative;
   animation-name: example;
-  animation-duration: 3s;  
+  animation-duration: 3s;
   animation: mymove 3s;
   animation-fill-mode: forwards;
 }
-.img_animation {animation-timing-function: ease;}
-@keyframes mymove {
-  from {bottom: 300px;}
-  to {bottom: 0px;}
+
+.img_animation {
+  animation-timing-function: ease;
 }
-.img_animation1{
+
+@keyframes mymove {
+  from {
+    bottom: 300px;
+  }
+
+  to {
+    bottom: 0px;
+  }
+}
+
+.img_animation1 {
   position: relative;
   animation-name: example;
   animation-duration: 1s;
   animation: mymove1 3s;
   animation-fill-mode: forwards;
 }
-.img_animation1 {animation-timing-function: ease;}
-@keyframes mymove1 {
-  from {right: 300px;}
-  to {right: 0px;}
+
+.img_animation1 {
+  animation-timing-function: ease;
 }
 
-.my_skills{
+@keyframes mymove1 {
+  from {
+    right: 300px;
+  }
+
+  to {
+    right: 0px;
+  }
+}
+
+.my_skills {
   font-weight: bold;
   font-size: 35px;
-  color:white
+  color: white
 }
-.html5{
+
+.html5 {
   height: 15px;
-  background-color:#34eb9e;
+  background-color: #34eb9e;
   border-radius: 15px;
   width: 95%;
 }
-.animation_skills{
+
+.animation_skills {
   position: relative;
   animation: mymove 5s;
   animation-fill-mode: forwards;
 }
+
 /* #html{
   animation: mymove2 1s infinite;
 }
@@ -290,128 +344,152 @@ ul li {
   to {left: 300px;}
 } */
 
-.javascript{
+.javascript {
   height: 15px;
-  background-color:#34eb9e;
+  background-color: #34eb9e;
   border-radius: 15px;
   width: 80%
 }
-.react{
+
+.react {
   height: 15px;
-  background-color:#34eb9e;
+  background-color: #34eb9e;
   border-radius: 15px;
   width: 80%
 }
-.bootstrap{
+
+.bootstrap {
   height: 15px;
-  background-color:#34eb9e;
+  background-color: #34eb9e;
   border-radius: 15px;
   width: 90%
 }
-.redux{
+
+.redux {
   height: 15px;
-  background-color:#34eb9e;
+  background-color: #34eb9e;
   border-radius: 15px;
   width: 80%
 }
+
 .css {
   height: 15px;
-  background-color:#34eb9e;
+  background-color: #34eb9e;
   border-radius: 15px;
   width: 90%
 }
-.skills_text{
+
+.skills_text {
   color: white;
 }
-.skill_percentage{
-  color:#34eb9e;
+
+.skill_percentage {
+  color: #34eb9e;
 }
+
 .bar-container {
   width: 100%;
-  background-color:#393d42;
+  background-color: #393d42;
   color: white;
 }
 
 /* Resume Css Page */
-.summary{
-  color:white;
+.summary {
+  color: white;
   font-size: 35px;
   padding: 60px;
   font-weight: bold;
 }
-.resume-item{
+
+.resume-item {
   border-left: 2px solid white;
 
   padding: 0px 0px 20px 20px;
   position: relative;
 }
+
 .resume-item::before {
   content: "";
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    border-radius: 50px;
-    left: -9px;
-    top: 0;
-    background:white;
-    border: 2px solid white;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 0;
+  background: white;
+  border: 2px solid white;
 
 }
-.qualification_text{
+
+.qualification_text {
   color: whitesmoke;
 }
-.qualification_text1{
+
+.qualification_text1 {
   color: #34eb9e;
 }
+
 /* Contact us page Css */
-.contactus{
- color: white;
- padding: 60px;
- font-weight: bold;
- font-size: 35px;
+.contactus {
+  color: white;
+  padding: 60px;
+  font-weight: bold;
+  font-size: 35px;
 }
 
 
-.card-flex{
+.card-flex {
 
   display: flex;
   background-color: #191d2b;
   border-radius: 4px;
   border: 1px solid whitesmoke;
   padding: 25px;
- /* box-shadow: 10px 10px 5px rgb(97, 121, 129); */
-}
-.card-text{
   
-    color: white;
-    font-size: 20px;
-    margin: 10px 21px;
+}
 
-  
+.card-text {
+
+  color: white;
+  font-size: 20px;
+  margin: 10px 21px;
+
+
 }
-.card-body{
+
+.card-body {
   padding-left: 20px;
 }
+
 .card-flex2 {
-  
-  background-color:#191d2b;
+
+  background-color: #191d2b;
   border-radius: 4px;
   border: 1px solid whitesmoke;
   padding: 30px;
- }
- .qualification{
+}
+
+.qualification {
   position: relative;
   animation: exp 5s;
   animation-fill-mode: forwards;
-  
- }
- @keyframes exp {
-  from {top: 300px;}
-  to {top: 0px;}
+
 }
-#linera{
+
+@keyframes exp {
+  from {
+    top: 300px;
+  }
+
+  to {
+    top: 0px;
+  }
+}
+
+#linera {
   animation-timing-function: ease-in-out;
 }
+
 /* Contact form csss */
 
 .contact_info {
@@ -419,6 +497,7 @@ ul li {
   background-color: 191d2b;
   display: flex;
 }
+
 .contact-info {
   background-color: #f0f0f0;
   padding: 20px;
@@ -434,7 +513,8 @@ ul li {
 .phoneicon,
 .phoneicon1 {
   font-size: 24px;
-  color: #007bff; /* Change to your desired icon color */
+  color: #007bff;
+
 }
 
 .card-flex {
@@ -447,14 +527,17 @@ ul li {
 }
 
 .contactus {
-  color: #007bff; /* Change to your desired title color */
+  color: #007bff;
+  
 }
 
 .text-white {
-  color: #fff !important; /* Override Bootstrap text-white class */
+  color: #fff !important;
+ 
 }
-.phone_icon{
-  
+
+.phone_icon {
+
   color: #34eb9e;
   font-size: 20px;
   margin: 17px 10px;
@@ -462,7 +545,8 @@ ul li {
   height: 56px;
 
 }
-.phone_div{
+
+.phone_div {
   display: flex;
 }
 
@@ -471,55 +555,62 @@ ul li {
 
 .flex_display {
   /* display: flex !important; */
-    margin: 1px -6px;
+  margin: 1px -6px;
 }
 
-.icon_phone{
-  
-    font-size: 30px;
-    color: white;
-     background-color: rgb(78, 76, 76) ;
-    display: flex;
-    align-items: center;
-    border: 1px solid white;
-    margin-right: 15px;
-    padding: 20px;
-    border: 2px solid #34eb9e;
-    border-radius: 37px;
-}
-.icon_phone1{
+.icon_phone {
+
   font-size: 30px;
-    color: white;
-     background-color: rgb(78, 76, 76) ;
-    display: flex;
-    align-items: center;
-    border: 1px solid white;
-    margin-right: 15px;
-    padding: 20px;
-    border: 2px solid #34eb9e;
-    border-radius: 50%;
+  color: white;
+  background-color: rgb(78, 76, 76);
+  display: flex;
+  align-items: center;
+  border: 1px solid white;
+  margin-right: 15px;
+  padding: 20px;
+  border: 2px solid #34eb9e;
+  border-radius: 37px;
 }
-.icon_phone1:hover{
+
+.icon_phone1 {
+  font-size: 30px;
+  color: white;
+  background-color: rgb(78, 76, 76);
+  display: flex;
+  align-items: center;
+  border: 1px solid white;
+  margin-right: 15px;
+  padding: 20px;
+  border: 2px solid #34eb9e;
+  border-radius: 50%;
+}
+
+.icon_phone1:hover {
   background-color: #34eb9e;
   border: 2px solid white;
 }
-.icon_phone:hover{
+
+.icon_phone:hover {
   background-color: #34eb9e;
   border: 2px solid white;
 }
-.email_text{
+
+.email_text {
   color: white;
   margin: 5px 1px;
 }
-.email{
+
+.email {
   color: white;
   margin: 1px 1px;
 }
-.centers{
+
+.centers {
   text-align: center;
   padding: 10px 30px;
 }
-.text_div{
+
+.text_div {
   padding: 10px 20px;
 }
 
@@ -572,8 +663,8 @@ ul li {
   outline: none;
 }
 
-.contact-form .input-text:focus + .label,
-.contact-form .input-text.not-empty + .label {
+.contact-form .input-text:focus+.label,
+.contact-form .input-text.not-empty+.label {
   -webkit-transform: translateY(-24px);
   transform: translateY(-24px);
 }
@@ -605,7 +696,8 @@ ul li {
   width: 200px;
   cursor: pointer;
 }
-.btn-text{
+
+.btn-text {
   text-align: center;
   margin-top: 10px;
   padding: 10px;
@@ -621,25 +713,27 @@ Header css */
 
 .jobs_icons {
   display: flex;
-  
+
   border-top: 1px solid white;
-  justify-content: center; /* Horizontally center */
-  align-items: center; /* Vertically center */
-  height: 100%; /* Adjust height as needed */
-  /* Add other styles for the container */
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  
 }
-.linkedin{
+
+.linkedin {
   font-size: 30px;
-    color: white;
-    border-radius: 40px;
-    padding: 10px;
-    border: 2px solid white; 
-    margin-left: 5px;
-    
-    background-color: #212431;
-     
-    
+  color: white;
+  border-radius: 40px;
+  padding: 10px;
+  border: 2px solid white;
+  margin-left: 5px;
+
+  background-color: #212431;
+
+
 }
+
 .icons {
   margin-top: 8px;
 }
