--- a/src/index.css
+++ b/src/index.css
@@ -138,7 +138,8 @@ ul li {
 }
 
 .bgimage {
-  
+  width: 100%;
+  height: 100%;
   background-image: url('../public/images/bg3.jpg');
   background-size: cover;
   background-position: center;
@@ -169,6 +170,7 @@ ul li {
 
 .typedtext {
   color: white;
+  text-align: center;
   font-size: 40px;
   font-weight: bold;
   text-shadow: 2px 2px 4px gray;
@@ -736,4 +738,26 @@ Header css */
 
 .icons {
   margin-top: 8px;
+}
+
+@media screen and (max-width:576px) {
+  .typedtext{
+    margin: 40px 0px 0px 0px;
+    font-size: 22px;
+  
+  }
+  .about_para_text {
+    color: white;
+    font-size: 14px;
+   
+}
+
+  linkedin {
+    font-size: 17px;
+    padding: 7px;
+  
+}
+  .align-items-center {
+    padding: 0px;
+}
 }
