--- a/src/index.css
+++ b/src/index.css
@@ -605,6 +605,7 @@ ul li {
 .email {
   color: white;
   margin: 1px 1px;
+  
 }
 
 .centers {
@@ -761,3 +762,43 @@ Header css */
     padding: 0px;
 }
 }
+
+
+/* Contact us form Css */
+
+.div1{
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+    --tw-bg-opacity: 0.05;
+    display: flex;
+    border-radius: 4px;
+    border:2px solid white;
+    padding: 20px 20px;
+    margin-top: 40px;
+}
+@media (min-width: 700px) and (max-width: 966px) {
+  
+  .email {
+    font-size: 13px;
+    margin-left: -25px;
+  }
+}
+@media  (min-width: 765px) and (max-width: 893px){
+  .email {
+    font-size: 10px;
+   
+  }
+}
+@media   (min-width: 270px) and (max-width: 345px){
+  .email {
+    font-size: 8px;
+  }
+}
+.div2 {
+  margin-top: 24px;
+}
+.bg{
+   margin-top: 20px;
+}
+
+
+
